add header images to books

--- a/src/books/a-walk-in-the-woods.mdx
+++ b/src/books/a-walk-in-the-woods.mdx
@@ -13,6 +13,7 @@ export const isbn = "978-0767902526";
 export const goodreads =
   "https://www.goodreads.com/book/show/9791.A_Walk_in_the_Woods";
 export const rating = 7.5;
+export const headerImage = "a-walk-in-the-woods-book-header.png";
 
 As an avid hiker and self-proclaimed outdoorsman, I was really looking forward to reading this book after it was given to me as a gift by my brother. I enjoyed hearing the humorous but sometimes dangerous stories from the trail, and the people Bryson and his hiking partner encountered.
 
