--- a/src/books/becoming-trader-joe.mdx
+++ b/src/books/becoming-trader-joe.mdx
@@ -13,6 +13,7 @@ export const isbn = "978-1400225439";
 export const goodreads =
   "https://www.goodreads.com/book/show/55918690-becoming-trader-joe";
 export const rating = 7.5;
+export const headerImage = "becoming-trader-joe-book-header.png";
 
 As a longtime fan of the Trader Joe's chain of grocery stores, I was intrigued when I came across this book. More than just a chronicle of how the chain was founded, the book is full of founder Joe Coulombe's business advice based on a career in the supermarket industry.
 
