--- a/src/books/educated.mdx
+++ b/src/books/educated.mdx
@@ -13,6 +13,7 @@ export const isbn = "978-0399590528";
 export const goodreads =
   "https://www.goodreads.com/book/show/35133922-educated";
 export const rating = 7;
+export const headerImage = "educated-book-header.png";
 
 This book was recommended to me by many people so my girlfriend and I decided to read it together. In it, Tara Westover describes her life of isolation as the child of survivalists. We follow her life as she sets foot in a classroom for the first time at the age of 17, and continues to strive for knowledge as she grows up.
 
