--- a/src/books/elon-musk.mdx
+++ b/src/books/elon-musk.mdx
@@ -13,6 +13,7 @@ export const isbn = "978-0062301253";
 export const goodreads =
   "https://www.goodreads.com/book/show/25541028-elon-musk";
 export const rating = 7.5;
+export const headerImage = "elon-musk-book-header.png";
 
 Elon Musk has a reputation of being quite divisive. Regardless of your views, however, he's build some incredible companies and accomplished a lot, so I wanted to dive into his story and how it all happened.
 
