--- a/src/books/lessons-in-chemistry.mdx
+++ b/src/books/lessons-in-chemistry.mdx
@@ -13,6 +13,7 @@ export const isbn = "978-0385547345";
 export const goodreads =
   "https://www.goodreads.com/book/show/58065033-lessons-in-chemistry";
 export const rating = 9;
+export const headerImage = "lessons-in-chemistry-book-header.png";
 
 This book had been on my list since its publication, but the waiting list at the library was many months long. Finally, it was my turn to read this book that nearly everyone around me had recommended.
 
