--- a/src/books/no-rules-rules.mdx
+++ b/src/books/no-rules-rules.mdx
@@ -13,6 +13,7 @@ export const isbn = "978-0593152386";
 export const goodreads =
   "https://www.goodreads.com/book/show/49099937-no-rules-rules";
 export const rating = 6;
+export const headerImage = "no-rules-rules-book-header.png";
 
 This book provides a unique look into how Netflix's culture made it into what it is today. It's undoubtedly targeted toward aspiring managers who want to implement the "Netflix way." However, as someone who works in a software company, I still found it interesting to understand the thought process and reasoning behind the infamous management style at Netflix.
 
