--- a/src/books/the-midnight-library.mdx
+++ b/src/books/the-midnight-library.mdx
@@ -13,6 +13,7 @@ export const isbn = "978-0525559474";
 export const goodreads =
   "https://www.goodreads.com/book/show/52578297-the-midnight-library";
 export const rating = 9;
+export const headerImage = "the-midnight-library-book-header.png";
 
 _The Midnight Library_ is a book that seemingly everyone but me had read, so I figured it was time when my hold at the library finally became available.
 
