--- a/src/books/the-ride-of-a-lifetime.mdx
+++ b/src/books/the-ride-of-a-lifetime.mdx
@@ -13,6 +13,7 @@ export const isbn = "978-0399592096";
 export const goodreads =
   "https://www.goodreads.com/book/show/44525305-the-ride-of-a-lifetime";
 export const rating = 8.5;
+export const headerImage = "the-ride-of-a-lifetime-book-header.png";
 
 This was one of the first "leadership advice" books I've read. I certainly did learn a lot from Bob's leadership style and advice, but what really drew me to this book was a desire to hear about how the acquisitions of Pixar, and then Marvel and Star Wars came to be. Having read [Lawrence Levy's _To Pixar And Beyond_](https://keegandonley.com/library/to-pixar-and-beyond "To Pixar and Beyond") a while back, I was excited to see that part of the story from the other side of the negotiations. The book didn't disappoint, and I enjoyed learning about these deals and how Bob navigated his career from a programming executive at ABC to CEO of the Walt Disney Company.
 
