--- a/src/books/to-pixar-and-beyond.mdx
+++ b/src/books/to-pixar-and-beyond.mdx
@@ -13,6 +13,7 @@ export const isbn = "978-1328745613";
 export const goodreads =
   "https://www.goodreads.com/book/show/27276428-to-pixar-and-beyond";
 export const rating = 9;
+export const headerImage = "to-pixar-book-header.png";
 
 This isn't a typical business book, it's much more personal than that as Lawrence Levy dives into his time at Pixar and his relationship with Steve Jobs.
 
