--- a/src/books/white-tears.mdx
+++ b/src/books/white-tears.mdx
@@ -14,6 +14,7 @@ export const goodreads =
   "https://www.goodreads.com/en/book/show/30780283-white-tears";
 export const rating = 7.75;
 export const purchaseLocation = "Shakespeare and Company, Paris";
+export const headerImage = "white-tears-book-header.png";
 
 The first thing to say about _White Tears_ is that it's an incredibly unique read. It's an exploration of racism in America, told through a story about American music: the blues. The story is one of ghosts, horror, and murder mystery. It explores the dark history of our nation's greed and exploitation in a completely new way.
 
