--- a/src/books/nobber.mdx
+++ b/src/books/nobber.mdx
@@ -14,6 +14,7 @@ export const goodreads =
   "https://www.goodreads.com/en/book/show/45277439-nobber";
 export const rating = 8.25;
 export const purchaseLocation = "Charlie Byrne's Bookshop, Galway, Ireland";
+export const headerImage = "nobber-book-header.png";
 
 _Nobber_ is written by a young Irish writer named Oisín Fagan. I purchased my copy when visiting Galway, Ireland at [Charlie Byrne's Bookshop](https://charliebyrne.ie/ "Charlie Byrne's Bookshop"). I hadn't read fiction in quite some time, so I was looking forward to getting starting with this work of historical fiction.
 
