--- a/src/books/template.mdx
+++ b/src/books/template.mdx
@@ -12,3 +12,4 @@ export const isbn = "9781328745613";
 export const goodreads = "goodreadsUrl";
 export const rating = 0;
 export const purchaseLocation = "Location";
+export const headerImage = "image";
