update some images

--- a/src/posts/apple-shortcuts-fitness.mdx
+++ b/src/posts/apple-shortcuts-fitness.mdx
@@ -5,7 +5,7 @@ export const title =
 export const description =
   "How I use Apple Shortcuts to complement my current fitness and health tracking tools";
 export const tags = ["fitness", "hobby"];
-export const cover = "fitness-shortcuts-cover.png";
+export const cover = "fitness-shortcuts-wide-cover.png";
 export const published = new Date(2023, 0, 31);
 export const shortCodes = ["fitness-shortcuts"];
 
