add new holiday cover

--- a/src/posts/happy-holidays-22.mdx
+++ b/src/posts/happy-holidays-22.mdx
@@ -3,7 +3,7 @@ export const title = "Happy Holidays!";
 export const description =
   "Happy holidays, and thanks for reading for another year! See you all in 2023!";
 export const tags = [];
-export const cover = "holidays-2022-cover.png";
+export const cover = "holidays-2022-wide-cover.png";
 export const published = new Date(2022, 11, 23);
 export const shortCodes = ["holidays-2022"];
 
