--- a/src/posts/how-to-build-a-calendar-component-in-react.mdx
+++ b/src/posts/how-to-build-a-calendar-component-in-react.mdx
@@ -11,7 +11,7 @@ Recently, I had to implement a calendar view for some complex data, but didn't w
 
 I haven't built a calendar application from scratch since my senior project in college, so I enjoyed the opportunity to write something new, now that I have a lot more experience between now and my last attempt. The underlying data structure is something I've used for calendar applications in the past and has worked really well.
 
-You can find a live demo of what I built [here on my website](https://keegandonley.com/calendarDemo "Calendar Demo").
+You can find a live demo of what I built [here on my website](https://v2.keegandonley.com/calendarDemo "Calendar Demo").
 
 > This is a full tutorial, the first one I'll be publishing on my new blog. If you'd like a quick summary instead, you can [skip to the tldr](#summaryortldr "tldr") at the bottom. Otherwise, read on!
 
