fix anchor tags

--- a/src/posts/how-to-build-a-calendar-component-in-react.mdx
+++ b/src/posts/how-to-build-a-calendar-component-in-react.mdx
@@ -229,7 +229,7 @@ const weekDays = [
 
 ## Summary (or, tldr)
 
-In a few minutes we've built a calendar UI that can be a viable replacement for bulky third party calendars. You can find a demo of exactly what this tutorial resulted in [here on my website](https://keegandonley.com/calendarDemo "Calendar Demo"). If you'd like to see the completed code, you can find it in a [gist on my Github](https://gist.github.com/keegandonley/cf2a5bcc04bd9e540e87351fc1ca2163 "Calendar Gist").
+In a few minutes we've built a calendar UI that can be a viable replacement for bulky third party calendars. You can find a demo of exactly what this tutorial resulted in [here on my website](https://v2.keegandonley.com/calendarDemo "Calendar Demo"). If you'd like to see the completed code, you can find it in a [gist on my Github](https://gist.github.com/keegandonley/cf2a5bcc04bd9e540e87351fc1ca2163 "Calendar Gist").
 
 ![](calendar-post:image-2.png)
 
