--- a/src/posts/welcome-to-my-new-blog.mdx
+++ b/src/posts/welcome-to-my-new-blog.mdx
@@ -161,6 +161,7 @@ Here's the og image for this post:
   src={`/api/og/post?slug=${slug}&width=1200&height=630`}
   width={600}
   height={315}
+  alt="OG Image for this blog post, with the title and description"
 />
 
 Here's a super pared down example of my OG handler (see the full handler [here](https://github.com/keegandonley/keegan.codes/blob/main/src/app/api/og/page/route.tsx) if you're curious). Using
