--- a/src/posts/welcome-to-my-new-blog.mdx
+++ b/src/posts/welcome-to-my-new-blog.mdx
@@ -8,6 +8,7 @@ export const cover = "blog-launch-cover.png";
 export const description =
   "How my new website is built using the latest NextJS app directory, and other bleeding-edge features";
 export const published = new Date(2023, 4, 1);
+export const shortCodes = ["welcome", "new-blog"];
 
 This is an entirely new website built from the ground-up using many of the bleeding-edge features from [NextJS](https://beta.nextjs.org/docs) and [Vercel](https://vercel.com/).
 In this post I'm going to dive into how it's built!
