final touches on currying post

--- a/src/posts/currying-react.mdx
+++ b/src/posts/currying-react.mdx
@@ -2,12 +2,13 @@ import { CurryingExample } from "../components/Post/Interactive/Currying";
 import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
 import { faGraduationCap } from "@fortawesome/pro-solid-svg-icons";
 
-export const title = "A Helpful Currying Pattern for React Callbacks";
-export const slug = "a-helpful-currying-pattern-for-react-callbacks";
+export const title = "Mastering React Component Callbacks with Currying";
+export const slug = "mastering-react-component-callbacks-with-currying";
 export const tags = ["React", "javascript"];
-export const description = "How to use currying with React";
+export const description =
+  "How to use functional currying to make React callbacks more clear and maintainable";
 export const cover = "react-currying-cover.png";
-export const published = new Date(2023, 4, 4);
+export const published = new Date(2023, 4, 5);
 export const shortCodes = ["currying-react"];
 
 Currying is a technique in functional programming to break down function call arguments.
