add some more slides

--- a/src/app/slides/render23/[slide]/content/intro.mdx
+++ b/src/app/slides/render23/[slide]/content/intro.mdx
@@ -1,3 +1,13 @@
-## Render Atlanta 2023 Summary
+import { Avatar } from "../../../../../components/Avatar";
+import { SlideFooter } from "../../../components/Footer";
 
-### Exceprts from my favorite talks at one of my favorite conferences
+# Render Atlanta 2023 Summary
+
+---
+
+#### Select excerpts from conference talks at Render Atlanta 2023
+
+<SlideFooter>
+  <Avatar width={50} />
+  Slides available at *keegan.codes/render23recap*
+</SlideFooter>
