--- a/src/app/slides/render23/[slide]/content/npm-security-summary.mdx
+++ b/src/app/slides/render23/[slide]/content/npm-security-summary.mdx
@@ -1,1 +1,6 @@
-## NPM Package Security
+import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
+import { faShieldHalved } from "@fortawesome/pro-solid-svg-icons";
+
+# <FontAwesomeIcon icon={faShieldHalved} /> NPM Package Security
+
+---
