--- a/src/app/slides/render23/[slide]/content/modern-css.mdx
+++ b/src/app/slides/render23/[slide]/content/modern-css.mdx
@@ -4,3 +4,7 @@ import { faCss3 } from "@fortawesome/free-brands-svg-icons";
 # <FontAwesomeIcon icon={faCss3} /> Modern CSS Features
 
 ---
+
+### The CSS spec is always changing
+
+#### Modern browsers stay up-to-date with what's on the bleeding edge and add support for CSS level 4 features
