--- a/src/app/slides/render23/[slide]/content/npm-security-summary.mdx
+++ b/src/app/slides/render23/[slide]/content/npm-security-summary.mdx
@@ -4,3 +4,20 @@ import { faShieldHalved } from "@fortawesome/pro-solid-svg-icons";
 # <FontAwesomeIcon icon={faShieldHalved} /> NPM Package Security
 
 ---
+
+### Protestware
+
+##### Packages that are update to support the authors' cause by force
+
+`event-source-polyfill` redirected any application
+using it after 15 seconds
+
+`left-pad` and `faker` were removed from NPM on purpose over various disputes
+
+### Postinstall Scripts
+
+Can potentially execute malicious code to grand remote shell access after installing a package
+
+## The solution?
+
+##### Regularly update (but not too often)
