--- a/src/app/slides/render23/[slide]/content/topics.mdx
+++ b/src/app/slides/render23/[slide]/content/topics.mdx
@@ -9,14 +9,20 @@ import { faCss3 } from "@fortawesome/free-brands-svg-icons";
 
 ---
 
-#### <FontAwesomeIcon icon={faShieldHalved} /> NPM Package Security
+### <FontAwesomeIcon icon={faShieldHalved} /> NPM Package Security
 
 Potential ways npm can be exploited to introduce vulnerabilities
 
-#### <FontAwesomeIcon icon={faRobotAstromech} /> GitHub Copilot
+---
+
+### <FontAwesomeIcon icon={faRobotAstromech} /> GitHub Copilot
 
 Tips for Copilot from a GitHub developer advocate
 
-#### <FontAwesomeIcon icon={faCss3} /> Modern CSS Features
+How malicious dependencies can be a security risk when using Copilot
+
+---
+
+### <FontAwesomeIcon icon={faCss3} /> Modern CSS Features
 
 Present and future advancements in CSS
