--- a/src/app/slides/render23/[slide]/content/copilot-tips.mdx
+++ b/src/app/slides/render23/[slide]/content/copilot-tips.mdx
@@ -20,4 +20,4 @@ Write a high level description of what a file contains at the top in a comment
 
 Follow consistent naming conventions (don't mix case)
 
-Keep files open in a tab that you want Copilot to have in context
+If you want Copilot to have a certain file in context, make sure to keep that file open in a tab of your IDE
