--- a/src/posts/short-variable-names.mdx
+++ b/src/posts/short-variable-names.mdx
@@ -1,10 +1,10 @@
-export const title = "When are Abbreviated Variable Names a Good Idea?";
+export const title = "When Can I Use Abbreviated Variable Names?";
 export const slug = "abbreviated-variable-names";
 export const tags = ["software", "opinion"];
 export const description =
   "Most advice says to avoid abbreviations in variable names, but are there situations where they're acceptable?";
 export const cover = "short-variable-names-cover.png";
-export const published = new Date(2023, 7, 14);
+export const published = new Date(2023, 7, 21);
 export const shortCodes = ["abbreviated-variables"];
 
 Back when I was in college working on my computer science degree, I also worked
